<resources>
    <string name="app_name">JobsFinderApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_a_perfect_job_match">Find a Perfect\nJob Match</string>
    <string name="finding_your_dream_job">Finding your dream job is more easier \nand faster with JobHub</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="fill_your_details_or_continue">Fill your details or continue\nwith social media</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="ou_continue_with">or continue with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="register_account">Register Account</string>
    <string name="user_name">User Name</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create Account?</string>
    <string name="back">Back</string>
    <string name="full_time">Full Time</string>
    <string name="part_time">Part Time</string>
    <string name="internship">Internship</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="signup">Sing Up</string>
    <string name="web_client_id">213406424824-6hr8vht83u0ksnmkt7o4d5rptu95uekq.apps.googleusercontent.com</string>
    <string name="menu">Menu</string>
    <string name="search_here">Search here…</string>
    <string name="show_all">Show All</string>
    <string name="popular_job">Popular Job</string>
    <string name="user_image">User Image</string>
    <string name="favourite">Favourite</string>
    <string name="recent_post">Recent Post</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="job_company">Job Company</string>
    <string name="salutation">Hello, </string>
    <string name="set_filters">Set Filters</string>
    <string name="category">Category</string>
    <string name="save_now">Save Now</string>
    <string name="your_email">Your Email</string>
    <string name="name">Name</string>
    <string name="empty" />
    <string name="favorites">Favorites</string>
    <string name="logout">Log Out</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="make_logout">Make Logout?</string>
    <string name="are_you_sure_want_to_logout">Are you sure you want to log out?</string>
    <string name="you_dont_have_any_favorites">You don\'t have any \nfavourites</string>
    <string name="company_logo">Company Logo</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="reviews">Reviews</string>
    <string name="dont_have_items_saved">Don\'t have items saved!</string>
    <string name="application">Application</string>
    <string name="dash">Dash</string>
    <string name="apply">Apply</string>
    <string name="sub_category">Sub Category</string>
    <string name="location">Location</string>
    <string name="salary">Salary</string>
    <string name="job_type">Job Type</string>
    <string name="job_apply">Job Apply</string>
    <string name="first_name">First Name</string>
    <string name="country">Country</string>
    <string name="last_name">Last Name</string>
    <string name="cv">CV</string>
    <string name="upload_file">Upload File</string>
    <string name="applications">Applications</string>
    <string name="you_don_apply_for_any_job">You don\'t apply for any job!</string>
    <string name="company_name">Company Name</string>
    <string name="salary_entry">Salary Entry</string>
    <string name="salary_end">Salary End</string>
    <string name="already_applied">Already Applied</string>
    <string name="not_found_any_job">Not Found Any Job</string>
    <string name="remove_filters">Remove Filters</string>
    <string name="enter_with_guest">Enter With Guest</string>
    <string-array name="category_array">
        <item>Select</item>
        <item>Popular</item>
        <item>Recent Posted</item>
    </string-array>
</resources>