<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_fb">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.JobApplyActivity">

        <TextView
            android:id="@+id/textView10"
            style="@style/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/job_apply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imgBtnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:srcCompat="@drawable/ic_arrow_left_rounded" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/first_name"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBtnBack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextFirstName"
                style="@style/text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLastName"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/last_name"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextLastName"
                style="@style/text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                style="@style/text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/editTextTextMultiLineMessage"
            style="@style/text_input_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:labelFor="@id/textView5"
            android:minLines="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCountry"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnUploadCv"
            style="@style/upload_file_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:drawableBottom="@drawable/ic_file_24"
            android:drawableTint="@color/gray_a8a8aa"
            android:paddingVertical="10dp"
            android:text="@string/upload_file"
            android:textAlignment="center"
            android:textColor="@color/gray_a8a8aa"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLineMessage" />

        <Button
            android:id="@+id/btnApply"
            style="@style/btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnUploadCv"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnCountry"
            style="@style/upload_file_btn"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/country"
            android:textColor="@color/gray_a8a8aa"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

