<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.fragments.ProfileFragment">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgViewUserProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/user_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogOut"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvUserNameProfile"
                style="@style/p_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                tools:text="João Henrique" />

            <TextView
                android:id="@+id/textView11"
                style="@style/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserNameProfile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUserNameProfile"
                style="@style/text_input_layout"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextUserNameProfile"
                    style="@style/text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView12"
                style="@style/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/your_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUserNameProfile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUserEmailProfile"
                style="@style/text_input_layout"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextUserEmailProfile"
                    style="@style/text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSaveNow"
                style="@style/btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/save_now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUserEmailProfile" />

            <Button
                android:id="@+id/btnLogOut"
                style="@style/p_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/red"
                android:textSize="13sp"
                app:icon="@drawable/ic_logout_24"
                app:iconTint="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgViewUserProfile">

                <ImageButton
                    android:id="@+id/imgBtnOpenCamera"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/open_camera"
                    android:src="@drawable/ic_camera" />

                <ImageButton
                    android:id="@+id/imgBtnOpenGallery"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/open_gallery"
                    app:srcCompat="@drawable/ic_gallery" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</FrameLayout>
