<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollTab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragments.DescriptionJobDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDescriptionTab"
            style="@style/card_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:textAlignment="textStart"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--        style="@style/btn_without_color"-->

        <Button
            android:id="@+id/btnApply"
            style="@style/btn_apply"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/green_204646"
            android:text="@string/apply"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnFavoriteJob"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTab"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/btnFavoriteJob"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_btn_rounded_enabled"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/favourite"
            app:layout_constraintBottom_toBottomOf="@+id/btnApply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/btnApply"
            app:srcCompat="@drawable/ic_favorite_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="60dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>